# sbcstuff

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  README_ROCKCHIP_5b.md  pyproject.toml  pytest.ini  requirements-dev.txt
.github/workflows/: checkblack.yml  mypynpytests.yml  update-clone-badge.yml
repo_scripts/: blurimage.py  build-container-multiarch.sh  include.sh  update_badge.py
scripts/luks/: initramfs_local-bottom_cleanup-netplan  luks_boot_split.sh  luks_encrypt.sh  luks_prepare.sh  lv_shrink.sh  setup_clevis_tang.sh  tang_check_connection.sh
scripts/rock5b/: build-mesa-teflon.sh  release-mesa-teflon.sh  rock5b-hw-check.sh  rock5b-npu-test.py  rock5b-usb-boot-setup.sh
tests/: test_blurimage.py
